style.css
body {
    font-family: Roboto;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;

}


/* This is the header area */

.header {
    background-color: #1f2937;
    padding: 5px;
    margin: 0;
    display: flex;    
    justify-content: space-around;
    align-items: center;    
}

ul {
    display: flex;    
    justify-content: space-evenly;
    gap: 30px;
}

li {
    list-style: none;
}


/* This is the introduction area */

.introduction {
    background-color: #1f2937;
    gap: 70px;
    display: flex;
    padding: 50px;
    justify-content: space-around;
    
}

.main-photo {
    width: 400px;
    height: auto;
}

button {
    padding: 3px 10px;
}

/* This is the peojects area */

.random {
    display: flex;
    justify-content: center;
}

.project {
    
    width: 150px;
    height: 150px;
    border: 3px red solid;

}


.projects-section {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-evenly;
}

/* This is the peojects area */

.quote-section {
    background-color: #E5E7EB;
    padding: 50px 100px;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}


/* This is the peojects area */

.footer {
    background-color: #3882F6;
    margin:30px 100px;    
    border-radius: 10px;
    display: flex;
    justify-content: space-around;
    
    align-items: center;


}

.call-to-action {
    
    display: flex;
    flex-direction: column;
    justify-content: center;
    
}

